--- a/src/styles/topbar.module.css
+++ b/src/styles/topbar.module.css
@@ -1,7 +1,16 @@
-.gradation {
-    background-color: #3b82f6;
-    animation: gradient 5s ease infinite;
-    background-size: 400% 400%;
+.loadingContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: blue;
+}
+
+.loadingBar {
+    height: 100%;
+    background-color: white;
+    transition: width 0.5s ease-in-out;
 }
 
 @keyframes gradient {
